--- a/MeTroMap_HCM/MeTroMap_HCM.csproj
+++ b/MeTroMap_HCM/MeTroMap_HCM.csproj
@@ -177,6 +177,9 @@
       <Name>MetroMap_HCM.DAL</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\backgroundFrmMain.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
