--- a/MeTroMap_HCM/MeTroMap_HCM.csproj
+++ b/MeTroMap_HCM/MeTroMap_HCM.csproj
@@ -180,6 +180,9 @@
   <ItemGroup>
     <None Include="Resources\backgroundFrmMain.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Thiết kế chưa có tên.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
