--- a/MeTroMap_HCM/App.config
+++ b/MeTroMap_HCM/App.config
@@ -5,8 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MetroConn" connectionString="Data Source=ADMIN-PC\SQLEXPRESS;Initial Catalog=MetroMap_HCM;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="Model1" connectionString="data source=ADMIN-PC\SQLEXPRESS;initial catalog=MetroMap_HCM;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MetroConn" connectionString="Data Source=DESKTOP-JPDSSDE\SQLEXPRESS;Initial Catalog=MetroMap_HCM;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=DESKTOP-JPDSSDE\SQLEXPRESS;initial catalog=MetroMap_HCM;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <startup>
