--- a/MetroMap_HCM.DAL/App.config
+++ b/MetroMap_HCM.DAL/App.config
@@ -9,11 +9,15 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-
-	<connectionStrings>
-		<add name="MetroConn" connectionString="Data Source=ADMIN-PC\SQLEXPRESS;Initial Catalog=MetroMap_HCM;Integrated Security=True;" providerName="System.Data.SqlClient" />
-		<add name="Model1" connectionString="data source=ADMIN-PC\SQLEXPRESS;initial catalog=MetroMap_HCM;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-
-	</connectionStrings>
-	
+  <connectionStrings>
+    <add name="MetroConn" connectionString="Data Source=DESKTOP-JPDSSDE\SQLEXPRESS;Initial Catalog=MetroMap_HCM;Integrated Security=True;"
+      providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=DESKTOP-JPDSSDE\SQLEXPRESS;initial catalog=MetroMap_HCM;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="Ve" connectionString="data source=DESKTOP-JPDSSDE\SQLEXPRESS;initial catalog=MetroMap_HCM;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="MetroMap_HCM.DAL.Properties.Settings.MetroMap_HCMConnectionString"
+      connectionString="Data Source=DESKTOP-JPDSSDE\SQLEXPRESS;Initial Catalog=MetroMap_HCM;Integrated Security=True;TrustServerCertificate=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
