--- a/MeTroMap_HCM/MeTroMap_HCM.csproj
+++ b/MeTroMap_HCM/MeTroMap_HCM.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -66,6 +67,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormAnhCacTuyen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAnhCacTuyen.Designer.cs">
+      <DependentUpon>FormAnhCacTuyen.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDatVe.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,6 +127,12 @@
     <Compile Include="frmThongKe.Designer.cs">
       <DependentUpon>frmThongKe.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmThongTinVe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmThongTinVe.Designer.cs">
+      <DependentUpon>frmThongTinVe.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTimDuong.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +147,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormAnhCacTuyen.resx">
+      <DependentUpon>FormAnhCacTuyen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmDatVe.resx">
       <DependentUpon>frmDatVe.cs</DependentUpon>
     </EmbeddedResource>
@@ -149,11 +165,17 @@
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmTaiKhoanNguoiDung.resx">
+      <DependentUpon>frmTaiKhoanNguoiDung.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmThanhToan.resx">
       <DependentUpon>frmThanhToan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmThongKe.resx">
       <DependentUpon>frmThongKe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmThongTinVe.resx">
+      <DependentUpon>frmThongTinVe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTimDuong.resx">
       <DependentUpon>frmTimDuong.cs</DependentUpon>
@@ -200,6 +222,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Thiết kế chưa có tên.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\3-ban-do-metro-tphcm-cap-nhat-moi-nhat.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
